# Trencadis

./: .gitignore  README.md
services/recipe-service/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
services/recipe-service/alembic/: env.py
services/recipe-service/alembic/versions/: a73ddd483b13_initial_migration_create_recipes_and_.py
services/recipe-service/src/Application/DTO/: RecipeDTOs.py
services/recipe-service/src/Application/Factory/: RecipeUseCaseFactoryInterface.py
services/recipe-service/src/Application/UseCase/: CreateRecipeUseCase.py  ListRecipesUseCase.py
services/recipe-service/src/Domain/Entity/: Recipe.py
services/recipe-service/src/Domain/Exception/: DomainException.py  IngredientAlreadyExistsException.py
services/recipe-service/src/Domain/Repository/: RecipeRepositoryInterface.py
services/recipe-service/src/Domain/ValueObject/: CommonIngredients.py  Ingredient.py  MeasurementUnit.py
services/recipe-service/src/Infrastructure/Config/: Settings.py
services/recipe-service/src/Infrastructure/Delivery/Http/FastAPI/: main.py
services/recipe-service/src/Infrastructure/Delivery/Http/Security/: KeycloakGuard.py
services/recipe-service/src/Infrastructure/Persistence/: Database.py
services/recipe-service/src/Infrastructure/Persistence/InMemory/: InMemoryRecipeRepository.py
services/recipe-service/tests/: conftest.py  test_smoke.py
services/recipe-service/tests/Integration/: test_recipe_api.py
services/recipe-service/tests/Unit/Application/UseCase/: test_create_recipe.py  test_list_recipe.py
(+17 files in other folders)
