[project]
name = "trencadis-recipe-service"
version = "1.0.0"
description = "home management ecosystem built to demonstrate modern software engineering practices."
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
