[project]
name = "trencadis-recipe-service"
version = "1.0.0"
description = "Recipe management service for the Trencadís suite, demonstrating Clean Architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",# ORM
    "asyncpg>=0.28.0",  # PostgreSQL async driver
    "alembic>=1.11.0",  # Database migrations
    "psycopg2-binary>=2.9.0"    # PostgreSQL driver for sync operations
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "httpx>=0.24.0",
    "faker>=40.1.2",
    "pytest-mock>=3.15.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"